web-infras/parser/tests/fixtures/esprima/ES6/program/script/invalid-export-declaration/output.txt
[SyntaxError]: 'import' and 'export' may appear only with 'sourceType: "module"' (1,1)
1|export default function () {}
 |^
